Update mechanistic_interpretability_tutorial.ipynb (minor fix 1)

--- a/2_mechanistic_interpretability/mechanistic_interpretability_tutorial.ipynb
+++ b/2_mechanistic_interpretability/mechanistic_interpretability_tutorial.ipynb
@@ -251,7 +251,7 @@
       "source": [
         "## Loading and Running Models\n",
         "\n",
-        "TransformerLens comes loaded with >40 open source GPT-style models. You can load any of them in with `HookedTransformer.from_pretrained(MODEL_NAME)`. For this demo notebook we'll look at GPT-2 Small, an 80M parameter model, see the Available Models section for info on the rest."
+        "TransformerLens comes loaded with >40 open source GPT-style models. You can load any of them in with `HookedTransformer.from_pretrained(MODEL_NAME)`. For this demo notebook we'll look at GPT-2 Small, a 100M parameter model, see the Available Models section for info on the rest."
       ]
     },
     {
